--- a/TzalemTmuna/Properties/Resources.resx
+++ b/TzalemTmuna/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="lightComment" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\lightComment.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="lightProfile" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\lightProfile.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="lightLike" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\lightLike.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -139,14 +142,23 @@
   <data name="lightUpload" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\lightUpload.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="darkFlag" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\darkFlag.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="lightSend" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\lightSend.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="darkComment" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\darkComment.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="darkProfile" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\darkProfile.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="darkUpload" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\darkUpload.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="lightFlag" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\lightFlag.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="lightSearch" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\lightSearch.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -163,10 +175,10 @@
   <data name="darkSearch" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\darkSearch.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="lightProfile" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\lightProfile.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="lightDelete" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\lightDelete.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="darkProfile" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\darkProfile.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="darkDelete" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\darkDelete.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
