--- a/TzalemTmuna/Properties/Resources.resx
+++ b/TzalemTmuna/Properties/Resources.resx
@@ -136,14 +136,17 @@
   <data name="darkLikeFilled" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\darkLikeFilled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="darkLike" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\darkLike.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="darkUpload" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\darkUpload.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="lightUpload" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\lightUpload.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="darkFlag" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\darkFlag.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="darkDelete" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\darkDelete.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="lightDelete" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\lightDelete.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="lightSend" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\lightSend.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -154,14 +157,17 @@
   <data name="darkProfile" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\darkProfile.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="darkUpload" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\darkUpload.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="darkLike" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\darkLike.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="lightFlag" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\lightFlag.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="lightSearch" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\lightSearch.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="darkFlag" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\darkFlag.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="tzalemtmuna" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\tzalemtmuna.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -175,10 +181,10 @@
   <data name="darkSearch" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\darkSearch.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="lightDelete" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\lightDelete.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="lightSettings" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\lightSettings.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="darkDelete" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\darkDelete.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="darkSettings" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\darkSettings.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
