--- a/TzalemTmuna/Properties/Dark.resx
+++ b/TzalemTmuna/Properties/Dark.resx
@@ -121,6 +121,9 @@
   <data name="darkAdmin" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\darkAdmin.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="darkBan" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\darkBan.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="darkComment" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\darkComment.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -150,5 +153,8 @@
   </data>
   <data name="darkUpload" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\darkUpload.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="darkVerified" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\darkVerified.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
