--- a/TzalemTmuna/Properties/Dark.resx
+++ b/TzalemTmuna/Properties/Dark.resx
@@ -121,6 +121,9 @@
   <data name="darkAdmin" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\darkAdmin.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="darkAlert" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\darkAlert.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="darkBan" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\darkBan.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
