--- a/TzalemTmuna/Properties/Light.resx
+++ b/TzalemTmuna/Properties/Light.resx
@@ -121,6 +121,9 @@
   <data name="lightAdmin" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\lightAdmin.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="lightAlert" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\lightAlert.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="lightBan" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\lightBan.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
