--- a/TzalemTmuna/Properties/Dark.resx
+++ b/TzalemTmuna/Properties/Dark.resx
@@ -130,6 +130,9 @@
   <data name="darkComment" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\darkComment.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="darkCommentReport" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\darkCommentReport.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="darkDelete" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\darkDelete.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -141,6 +144,9 @@
   </data>
   <data name="darkLikeFilled" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\darkLikeFilled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="darkNoContentReport" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\darkNoContentReport.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="darkProfile" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\darkProfile.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -156,6 +162,9 @@
   </data>
   <data name="darkUpload" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\darkUpload.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="darkUser" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\darkUser.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="darkVerified" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\darkVerified.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
