--- a/TzalemTmuna/Properties/Light.resx
+++ b/TzalemTmuna/Properties/Light.resx
@@ -130,6 +130,9 @@
   <data name="lightComment" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\lightComment.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="lightCommentReport" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\lightCommentReport.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="lightDelete" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\lightDelete.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -141,6 +144,9 @@
   </data>
   <data name="lightLikeFilled" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\lightLikeFilled.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="lightNoContentReport" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\lightNoContentReport.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="lightProfile" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\lightProfile.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -156,6 +162,9 @@
   </data>
   <data name="lightUpload" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\lightUpload.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="lightUser" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\lightUser.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="lightVerified" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\lightVerified.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
